# therusthempfarmingexperiance

./: Cargo.toml  README.md
src/: consts.rs  genetics.rs  main.rs  person.rs  seed.rs
swervwer/: Cargo.toml
