[package]
name = "swervwer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.5", features = [
    "json",
    "query",
    "tokio",
    "http2",
    "headers",
    "ws",
] }
tokio = { version = "1.22", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
] }
anyhow = { version = "1.0.71", features = ["std"] }
serde_yaml = "0.9.14"
serde_json = { version = "1.0.81", features = ["raw_value"] }
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "postgres",
    "migrate",
    "macros",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
    "decimal",
] }
chrono = { version = "0.4.19", features = ["serde"] }
ring = "0.16.20"
base64 = "0.13.1"
hex = "0.4.3"
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
lazy_static = "1.4.0"
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features = ["rustls-tls-native-roots"] }
futures = "0.3.28"
rand = "0.8.5"
parking_lot = "0.12.1"
async-trait = "0.1.68"
bytes = { version = "1.4.0", features = ["serde"] }
tower = { version = "0.4.13", features = ["tokio"] }
